--- a/styles/dark.css
+++ b/styles/dark.css
@@ -9,4 +9,21 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+  --bg-color: #000028;
+  /* --bg-color: #3d252f; */
+  --bg-image: url("../images/cover-image-dark.png");
+  --text-color: #F1B2CE;
+  --main-font-color: #F1B2CE;
+  --text-decription: #000028;
+  --header-font-color: #FF0070;
+  --hover-color: rgba(255, 0, 112, 0.5);
+  --list-header-font-color: #000028;
+  --title-color: #DB00FF;
+  --accent-color: #FF0070;
+  --shadow-color: #FF0070;
+  --border-color: #FF0070;
+  --main-font: "IBM Plex mono", Arial, sans-serif;
+  --main-font-size: 1.125rem;
+  --accent-font: "IBM Plex mono", Arial, sans-serif;
+  --accent-font-size: 1.875rem;
 }
