--- a/styles/light.css
+++ b/styles/light.css
@@ -9,4 +9,20 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+  --bg-color: #fff1f7;
+  /* --bg-color: #3d252f; */
+  --bg-image: url("../images/cover-image-light.png");
+  --text-color: #353430;
+  --main-font-color: #353430;
+  --text-decription: #353030;
+  --hover-color: rgba(49, 42, 78, 0.4);
+  --header-font-color: #353030;
+  --title-color: #ffc2e6;
+  --accent-color: #ff8dcb;
+  --shadow-color: #ff0070;
+  --border-color: var(--text-color, #353430);
+  --main-font: "IBM Plex mono", Arial, sans-serif;
+  --main-font-size: 1.125rem;
+  --accent-font: "IBM Plex mono", Arial, sans-serif;
+  --accent-font-size: 1.875rem;
 }
