--- a/styles/style.css
+++ b/styles/style.css
@@ -2,4 +2,520 @@
 
 .page {
   /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
+  min-inline-size: 375px;
+  max-inline-size: 1024px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: auto;
+  background-color: var(--bg-color);
+  font-family: var(--main-font, "IBM Plex mono", Arial, sans-serif);
+  font-size: var(--main-font-size, 1.125rem);
+}
+
+.heder {
+  left: -4px;
+  background-image: var(--bg-image);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.decorated-zone {
+  position: relative;
+  width: 100%;
+  height: 768px;
+}
+
+.header__theme-menu {
+  height: inherit;
+}
+
+.header__theme-menu-list {
+  display: flex;
+  min-inline-size: 14.375rem;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.header__theme-menu-item {
+  display: flex;
+  height: inherit;
+  align-items: center;
+  justify-content: center;
+  height: 1.625rem;
+  width: 4.375rem;
+}
+
+.header__theme-menu-button {
+  position: relative;
+  font-size: inherit;
+  color: var(--header-font-color);
+  line-height: 1rem;
+  text-transform: lowercase;
+  letter-spacing: 0.3px;
+  padding-bottom: 0.25rem;
+  width: 100%;
+  height: inherit;
+  background-color: transparent;
+  border: 1px solid transparent;
+}
+
+.header__theme-menu-button:hover {
+  border: 1px solid var(--hover-color);
+}
+
+.header__theme-menu-button_active {
+  border: 1px solid var(--header-font-color, #312a4e);
+}
+
+.grid-container__one-column {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 2.454fr 1fr 2.454fr;
+  height: inherit;
+}
+
+.grid-container__two-columns {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  grid-auto-rows: auto;
+  gap: 11px;
+  padding-inline: 20px;
+  margin-block: 60px;
+}
+
+.grid-container__three-columns {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-auto-flow: row;
+  grid-auto-rows: auto;
+  gap: 20px;
+  padding-inline: 20px;
+  margin-block: 60px;
+}
+
+.grid-item__nav {
+  display: flex;
+  justify-content: center;
+  align-items: start;
+  padding: 20px 20px 0;
+}
+
+.grid-item__title {
+  display: flex;
+  justify-items: flex-start;
+  align-items: end;
+  color: var(--title-color, #ffc2e6);
+  text-shadow: 4px 4px 0 var(--shadow-color, #ff0070);
+}
+
+.header__title {
+  font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  line-height: 100%;
+  font-weight: bold;
+  margin: 0;
+}
+
+.grid-item__description {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  width: inherit;
+  padding-block-end: 35px;
+  margin-inline-end: 20px;
+}
+
+.grid-item__description-block {
+  position: relative;
+  max-width: 49%;
+}
+
+.grid-item__description-text {
+  background-color: var(--accent-color, #ff8dcb);
+  font-weight: bold;
+  line-height: 1.32;
+  color: var(--text-decription, #353030);
+  block-size: inherit;
+}
+
+.grid-item__description-block::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.27); /* Белый полупрозрачный фон */
+  z-index: 1; /* Псевдоэлемент будет поверх содержимого блока */
+}
+
+.square {
+  width: 25px;
+  height: 25px;
+}
+
+.square__top {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  border-top: 1px solid var(--border-color);
+  border-right: 1px solid var(--border-color);
+}
+
+.square__bottom {
+  position: absolute;
+  left: 20px;
+  bottom: 20px;
+  border-left: 1px solid var(--border-color);
+  border-bottom: 1px solid var(--border-color);
+}
+
+.grid-item__block-one_header {
+  grid-column: 1;
+  grid-row: 1;
+  font-family: "IBM Plex mono", Arial, sans-serif;
+  font-size: 18px;
+  line-height: 25px;
+}
+
+.grid-item__block-one_content {
+  grid-column: 2;
+  grid-row: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 0px;
+}
+
+.title_bold {
+  font-family: inherit;
+  font-size: 18px;
+  line-height: 23.4px;
+  color: var(--list-header-font-color);
+}
+
+.title_heder-color {
+  color: var(--header-font-color);
+}
+
+.title_accent {
+  background-color: var(--accent-color, #ff8dcb);
+}
+
+.title_normal {
+  font-weight: 400;
+  line-height: 23.4px;
+}
+
+.text-block {
+  line-height: 1.3;
+  margin-block-start: 10px;
+  margin-block-end: 20px;
+  color: var(--main-font-color);
+}
+
+.text-block_low {
+  line-height: 23.5px;
+  margin-block-start: 9px;
+}
+
+.link {
+  position: relative;
+  display: inline-block;
+  text-decoration: none;
+  color: inherit;
+  cursor: default;
+  outline: none;
+  transition: none;
+  text-shadow: 1.5px 1.5px 0 var(--accent-color, #ff8dcb);
+}
+
+.link::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 1.5px;
+  background-color: var(--main-font-color);
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+}
+
+.link:hover::after {
+  opacity: 1;
+}
+
+.full-width {
+  text-align: start;
+}
+
+.title_margin {
+  margin-block-end: 20px;
+}
+
+.grid-item__block-two_header {
+  grid-column: 1 / -1;
+  grid-row: 1;
+  gap: 20px;
+}
+
+.grid-item__block-two_content {
+  grid-column: 1 / -1;
+  grid-row: 2;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 21px;
+}
+
+.grid-item__block-three_header {
+  grid-column: 1;
+  grid-row: 1;
+}
+
+.grid-item__block-three_text {
+  grid-column: 2;
+  grid-row: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+.grid-item__block-four_header {
+  grid-column: 1 / -1;
+  grid-row: 1;
+}
+
+.image {
+  object-fit: cover;
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+
+.grid-item__block-four_sunset {
+  grid-column: 1 / 3;
+  grid-row: 2;
+}
+
+.grid-item__block-four_ice-cream {
+  grid-column: 3;
+  grid-row: 2 / 4;
+}
+
+.grid-item__block-four_ice-tape {
+  grid-column: 1;
+  grid-row: 3 / 5;
+}
+
+.grid-item__block-four_books {
+  grid-column: 2;
+  grid-row: 3;
+}
+
+.grid-item__block-four_street {
+  grid-column: 2 / 4;
+  grid-row: 4;
+}
+
+.footer__title {
+  grid-row: 2;
+  font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  line-height: 100%;
+  font-weight: bold;
+  margin: 0;
+  justify-content: center;
+  text-shadow: 2px 2px 0 var(--shadow-color, #ff0070);
+}
+
+@media (min-width: 501px) and (max-width: 768px) {
+  .page {
+    max-inline-size: 768px;
+  }
+  .decorated-zone {
+    height: 1024px;
+  }
+  .grid-container__one-column {
+    grid-template-rows: 3fr 130px 3fr;
+  }
+  .grid-item__description-block {
+    max-width: 48%;
+  }
+  .grid-item__nav {
+    align-items: flex-end;
+    align-items: center;
+    justify-content: flex-end;
+    padding: 35px 20px 0;
+  }
+  .header__theme-menu-list {
+    display: flex;
+    min-inline-size: 4.375rem;
+    min-block-size: 6.125rem;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+  .header__title {
+    padding-inline-start: 4px;
+    padding-block-end: 4px;
+  }
+
+  .grid-item__description-block::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: transparent; /* Белый полупрозрачный фон */
+    z-index: 1; /* Псевдоэлемент будет поверх содержимого блока */
+  }
+
+  .grid-item__title {
+    text-shadow: 4px 4px 0 var(--accent-color, #ff0070);
+  }
+
+  .grid-container__two-columns {
+    gap: 20px;
+  }
+  .grid-item__block-two_content {
+    grid-template-columns: 1fr;
+    gap: 0;
+  }
+}
+
+@media (max-width: 500px) {
+  .page {
+    max-inline-size: 375px;
+  }
+  main {
+    padding-block-start: 10px;
+  }
+  .decorated-zone {
+    height: 668px;
+  }
+  .grid-container__one-column {
+    grid-template-rows: 3fr 1fr 3fr;
+  }
+  .grid-item__description-block {
+    max-width: 100%;
+  }
+
+  .square__top {
+    top: 10px;
+    right: 10px;
+  }
+  .square__bottom {
+    left: 10px;
+    bottom: 10px;
+  }
+
+  .grid-item__title {
+    text-shadow: 4px 4px 0 var(--accent-color, #ff0070);
+  }
+
+  .grid-item__nav {
+    align-items: flex-end;
+    align-items: center;
+    justify-content: flex-end;
+    padding: 35px 10px 0;
+  }
+  .header__theme-menu-list {
+    display: flex;
+    min-inline-size: 4.375rem;
+    min-block-size: 6.125rem;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+  .header__title {
+    padding-inline-start: 10px;
+    padding-block: 27px;
+    font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+    line-height: 5.89rem;
+  }
+
+  .grid-item__description {
+    margin-inline: 10px;
+  }
+
+  .grid-item__description-block::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: transparent; /* Белый полупрозрачный фон */
+    z-index: 1; /* Псевдоэлемент будет поверх содержимого блока */
+  }
+
+
+  .grid-container__two-columns {
+    grid-template-columns: 1fr;
+    padding-inline: 10px;
+    margin-block: 30px;
+
+    gap: 20px;
+  }
+
+  .grid-container__three-columns {
+    grid-template-columns: 1fr;
+    margin-block: 30px;
+    padding-inline: 10px;
+  }
+
+  .grid-item__block-one_content {
+    grid-column: 1;
+    grid-row: 2;
+  }
+
+  .grid-item__block-two_header {
+    grid-column: 1;
+    grid-row: 1;
+  }
+
+  .grid-item__block-two_content {
+    grid-template-columns: 1fr;
+    gap: 0;
+    grid-column: 1;
+    grid-row: 2;
+  }
+
+  .grid-item__block-three_header {
+    grid-column: 1;
+    grid-row: 1;
+  }
+
+  .grid-item__block-three_text {
+    grid-column: 1;
+    grid-row: 2;
+  }
+
+  .grid-item__block-four_header {
+    grid-column: 1;
+    grid-row: 1;
+  }
+
+  .grid-item__block-four_sunset {
+    grid-column: 1;
+    grid-row: 2;
+  }
+  .grid-item__block-four_ice-cream {
+    grid-column: 1;
+    grid-row: 3;
+  }
+  .grid-item__block-four_ice-tape {
+    grid-column: 1;
+    grid-row: 4;
+  }
+  .grid-item__block-four_books {
+    grid-column: 1;
+    grid-row: 5;
+  }
+  .grid-item__block-four_street {
+    grid-column: 1;
+    grid-row: 6;
+  }
+
+  .gap_images {
+    gap: 10px;
+  }
 }
