--- a/styles/style.css
+++ b/styles/style.css
@@ -2,520 +2,366 @@
 
 .page {
   /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
-  min-inline-size: 375px;
-  max-inline-size: 1024px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin: auto;
-  background-color: var(--bg-color);
   font-family: var(--main-font, "IBM Plex mono", Arial, sans-serif);
-  font-size: var(--main-font-size, 1.125rem);
-}
-
-.heder {
-  left: -4px;
-  background-image: var(--bg-image);
-  background-size: cover;
-  background-repeat: no-repeat;
+  font-size: 1.125rem;
+  background-color: var(--bg-color, #fff1f7);
+  background-image: var(--bg-image, url(../images/cover-image-light.png));
   background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
 }
 
-.decorated-zone {
+.header {
   position: relative;
-  width: 100%;
-  height: 768px;
-}
-
-.header__theme-menu {
-  height: inherit;
-}
-
-.header__theme-menu-list {
-  display: flex;
-  min-inline-size: 14.375rem;
-  flex-direction: row;
-  justify-content: space-between;
-}
-
-.header__theme-menu-item {
-  display: flex;
-  height: inherit;
-  align-items: center;
-  justify-content: center;
-  height: 1.625rem;
-  width: 4.375rem;
-}
-
-.header__theme-menu-button {
-  position: relative;
-  font-size: inherit;
-  color: var(--header-font-color);
-  line-height: 1rem;
-  text-transform: lowercase;
-  letter-spacing: 0.3px;
-  padding-bottom: 0.25rem;
-  width: 100%;
-  height: inherit;
-  background-color: transparent;
-  border: 1px solid transparent;
-}
-
-.header__theme-menu-button:hover {
-  border: 1px solid var(--hover-color);
-}
-
-.header__theme-menu-button_active {
-  border: 1px solid var(--header-font-color, #312a4e);
-}
-
-.grid-container__one-column {
   display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 2.454fr 1fr 2.454fr;
-  height: inherit;
-}
+  grid-template-rows: 1fr auto 1fr;
+  block-size: 100vh;
 
-.grid-container__two-columns {
-  display: grid;
-  grid-template-columns: 1fr 2fr;
-  grid-auto-rows: auto;
-  gap: 11px;
-  padding-inline: 20px;
-  margin-block: 60px;
-}
-
-.grid-container__three-columns {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-auto-flow: row;
-  grid-auto-rows: auto;
-  gap: 20px;
-  padding-inline: 20px;
-  margin-block: 60px;
-}
-
-.grid-item__nav {
-  display: flex;
-  justify-content: center;
-  align-items: start;
-  padding: 20px 20px 0;
-}
-
-.grid-item__title {
-  display: flex;
-  justify-items: flex-start;
-  align-items: end;
-  color: var(--title-color, #ffc2e6);
-  text-shadow: 4px 4px 0 var(--shadow-color, #ff0070);
+  min-block-size: var(--block-size, 768px);
+  padding: var(--distance-element, 20px);
 }
 
 .header__title {
   font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
-  line-height: 100%;
-  font-weight: bold;
-  margin: 0;
+  line-height: 82.5%;
+  color: var(--accent-header-color, #ffc2e6);
+  text-transform: lowercase;
+  text-shadow: 4px 4px 0 var(--shadow-header-color, #FF0070);
+  margin-inline-start: -20px;
 }
 
-.grid-item__description {
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  width: inherit;
-  padding-block-end: 35px;
-  margin-inline-end: 20px;
-}
-
-.grid-item__description-block {
-  position: relative;
-  max-width: 49%;
-}
-
-.grid-item__description-text {
+.title-decor {
   background-color: var(--accent-color, #ff8dcb);
+  color: var(--accent-text-color, #353430);
+  font-size: inherit;
+}
+
+.header__description {
   font-weight: bold;
-  line-height: 1.32;
-  color: var(--text-decription, #353030);
-  block-size: inherit;
-}
-
-.grid-item__description-block::before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(255, 255, 255, 0.27); /* Белый полупрозрачный фон */
-  z-index: 1; /* Псевдоэлемент будет поверх содержимого блока */
-}
-
-.square {
-  width: 25px;
-  height: 25px;
-}
-
-.square__top {
-  position: absolute;
-  top: 20px;
-  right: 20px;
-  border-top: 1px solid var(--border-color);
-  border-right: 1px solid var(--border-color);
-}
-
-.square__bottom {
-  position: absolute;
-  left: 20px;
-  bottom: 20px;
-  border-left: 1px solid var(--border-color);
-  border-bottom: 1px solid var(--border-color);
-}
-
-.grid-item__block-one_header {
-  grid-column: 1;
-  grid-row: 1;
-  font-family: "IBM Plex mono", Arial, sans-serif;
-  font-size: 18px;
-  line-height: 25px;
-}
-
-.grid-item__block-one_content {
-  grid-column: 2;
-  grid-row: 1;
-  display: flex;
-  flex-direction: column;
-  gap: 0px;
-}
-
-.title_bold {
-  font-family: inherit;
-  font-size: 18px;
-  line-height: 23.4px;
-  color: var(--list-header-font-color);
-}
-
-.title_heder-color {
-  color: var(--header-font-color);
-}
-
-.title_accent {
-  background-color: var(--accent-color, #ff8dcb);
-}
-
-.title_normal {
-  font-weight: 400;
-  line-height: 23.4px;
-}
-
-.text-block {
   line-height: 1.3;
-  margin-block-start: 10px;
-  margin-block-end: 20px;
-  color: var(--main-font-color);
+  inline-size: max(50%, 355px);
+  justify-self: end;
+  align-self: center;
+  color: var(--description-text-color, #353030);
 }
 
-.text-block_low {
-  line-height: 23.5px;
-  margin-block-start: 9px;
+
+.header__theme-menu {
+  justify-self: center;
+  align-self: start;
 }
 
-.link {
-  position: relative;
-  display: inline-block;
-  text-decoration: none;
-  color: inherit;
-  cursor: default;
+.header__theme-menu-list {
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+}
+
+.header__theme-menu-button {
+  text-transform: lowercase;
+  color: var(--accent-title-color, #ff8dcb);
+  background: none;
+  border: none;
+  padding: 0 13px;
+  block-size: 26px;
+  line-height: 1;
+  cursor: pointer;
+}
+
+.header__theme-menu-button:hover {
+  outline: 1px solid var(--opacity-accent-color, rgb(53, 52, 48, 0.4));
+}
+
+.header__theme-menu-button:focus-visible {
   outline: none;
-  transition: none;
-  text-shadow: 1.5px 1.5px 0 var(--accent-color, #ff8dcb);
+  border-block-end: 1px solid currentColor;
 }
 
-.link::after {
+.header__theme-menu-button_active {
+  border: 1px solid currentColor;
+  pointer-events: none;
+}
+
+.header__label {
+  position: absolute;
+  color: var(--accent-color, #ff8dcb);
+
+  top: var(--distance-element, 20px);
+  right: 48px;
+}
+
+.header__label::after {
   content: "";
   position: absolute;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  height: 1.5px;
-  background-color: var(--main-font-color);
-  opacity: 0;
-  transition: opacity 0.3s ease-in-out;
+  inline-size: 9px;
+  block-size: 9px;
+  background-color: var(--accent-color, #ff0070);
+  box-shadow: 0px 0px 4px 2px var(--accent-color, #ff8dcb);
+  border-radius: 50%;
+  top: 30%;
+  left: 42px;
 }
 
-.link:hover::after {
-  opacity: 1;
+.decorated-zone::before {
+  content: "";
+  position: absolute;
+  inline-size: 25px;
+  block-size: 25px;
+  border-block-start: 1px solid var(--accent-title-color, #353430);
+  border-inline-end: 1px solid var(--accent-title-color, #353430);
+
+  top: var(--distance-element, 20px);
+  right: var(--distance-element, 20px);
 }
 
-.full-width {
-  text-align: start;
+.decorated-zone::after {
+  content: "";
+  position: absolute;
+  inline-size: 25px;
+  block-size: 25px;
+  border-block-end: 1px solid var(--accent-title-color, #353430);
+  border-inline-start: 1px solid var(--accent-title-color, #353430);
+
+  left: var(--distance-element, 20px);
+  bottom: var(--distance-element, 20px);
 }
 
-.title_margin {
-  margin-block-end: 20px;
+.main_container {
+  display: flex;
+  flex-direction: column;
+  color: var(--text-color, #353430);
+  line-height: 1.3;
+
+  gap: 80px;
+  padding: 0 var(--distance-element, 20px);
+  margin-block-start: 60px;
 }
 
-.grid-item__block-two_header {
-  grid-column: 1 / -1;
-  grid-row: 1;
+.section {
+  display: grid;
+  flex-direction: column;
   gap: 20px;
 }
 
-.grid-item__block-two_content {
-  grid-column: 1 / -1;
-  grid-row: 2;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 21px;
-}
-
-.grid-item__block-three_header {
-  grid-column: 1;
-  grid-row: 1;
-}
-
-.grid-item__block-three_text {
-  grid-column: 2;
-  grid-row: 1;
+.list {
   display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.section__title {
+  color: var(--accent-title-color, #353430);
+  font-size: inherit;
+}
+
+.text-block {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.section-why {
+  grid-template-columns: 1fr 2fr;
+}
+
+.section-why .list {
   flex-direction: column;
 }
 
-.grid-item__block-four_header {
-  grid-column: 1 / -1;
-  grid-row: 1;
+.section-why .section__title {
+  grid-row: span 1;
+}
+
+.section-causes {
+  grid-template-rows: repeat(2, auto);
+}
+
+.section-causes .list {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.section-causes .section__title {
+  inline-size: 33vw;
+}
+
+.section-advices {
+  grid-template-columns: 1fr 2fr;
+}
+
+.section-advices .section__title {
+  grid-row: span 2;
+}
+
+.section-galery {
+  flex-direction: column;
+  gap: 10px;
+}
+
+.section-galery .section__title {
+  color: var(--accent-text-color, #353430);
+}
+
+.galery__blocks {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-auto-flow: row;
+  gap: var(--distance-element, 20px);
+  margin-block-start: 10px;
+}
+
+.link {
+  text-decoration: none;
+  text-shadow: 2px 2px 0 var(--accent-color, #ff8dcb);
+}
+
+.link:hover {
+  border-block-end: 1px solid currentColor;
+}
+
+.link:focus-visible {
+  outline: 1px solid currentColor;
 }
 
 .image {
+  inline-size: 100%;
+  block-size: 100%;
   object-fit: cover;
-  display: block;
-  width: 100%;
-  height: 100%;
 }
 
-.grid-item__block-four_sunset {
+.item__sunset {
   grid-column: 1 / 3;
-  grid-row: 2;
 }
 
-.grid-item__block-four_ice-cream {
+.item__ice-cream {
+  grid-row: 1 / 3;
   grid-column: 3;
+}
+
+.item__tape {
   grid-row: 2 / 4;
 }
 
-.grid-item__block-four_ice-tape {
-  grid-column: 1;
-  grid-row: 3 / 5;
-}
+/* .item__books {
+  grid-row: 2;
+} */
 
-.grid-item__block-four_books {
-  grid-column: 2;
-  grid-row: 3;
-}
-
-.grid-item__block-four_street {
+.item__street {
   grid-column: 2 / 4;
-  grid-row: 4;
+}
+
+.footer {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  block-size: 100vh;
+  min-block-size: var(--block-size, 1024px);
+
+  padding: var(--distance-element, 20px);
+  margin-block-start: 60px;
 }
 
 .footer__title {
-  grid-row: 2;
   font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
-  line-height: 100%;
-  font-weight: bold;
-  margin: 0;
-  justify-content: center;
-  text-shadow: 2px 2px 0 var(--shadow-color, #ff0070);
+  text-shadow: 2px 2px 0 var(--shadow-header-color, #FF0070);
+  line-height: 82.5%;
+  color: var(--accent-header-color, #ffc2e6);
+  text-transform: lowercase;
+  text-align: center;
 }
 
-@media (min-width: 501px) and (max-width: 768px) {
-  .page {
-    max-inline-size: 768px;
+@media (width <=1023px) {
+  :root {
+    --shadow-header-color: var(--accent-color);
+    --description-text-color: var(--text-color);
+    --block-size: 1024px;
   }
-  .decorated-zone {
-    height: 1024px;
+
+
+  .header__theme-menu {
+    justify-self: end;
+    align-self: center;
   }
-  .grid-container__one-column {
-    grid-template-rows: 3fr 130px 3fr;
-  }
-  .grid-item__description-block {
-    max-width: 48%;
-  }
-  .grid-item__nav {
-    align-items: flex-end;
-    align-items: center;
-    justify-content: flex-end;
-    padding: 35px 20px 0;
-  }
+
   .header__theme-menu-list {
-    display: flex;
-    min-inline-size: 4.375rem;
-    min-block-size: 6.125rem;
     flex-direction: column;
-    justify-content: space-between;
-  }
-  .header__title {
-    padding-inline-start: 4px;
-    padding-block-end: 4px;
   }
 
-  .grid-item__description-block::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: transparent; /* Белый полупрозрачный фон */
-    z-index: 1; /* Псевдоэлемент будет поверх содержимого блока */
+  
+
+  .section-causes .section__title {
+    inline-size: min-content;
   }
 
-  .grid-item__title {
-    text-shadow: 4px 4px 0 var(--accent-color, #ff0070);
+  .section-causes .list {
+    display: flex;
+    flex-direction: column;
   }
 
-  .grid-container__two-columns {
-    gap: 20px;
+  .section-advices .list {
+    flex-direction: column;
   }
-  .grid-item__block-two_content {
-    grid-template-columns: 1fr;
-    gap: 0;
+
+  .section-advices .list .title-decor {
+    font-weight: normal;
   }
+
+
 }
 
-@media (max-width: 500px) {
-  .page {
-    max-inline-size: 375px;
+@media (width <=767px) {
+  :root {
+    --distance-element: 10px;
+    --block-size: 668px;
   }
-  main {
-    padding-block-start: 10px;
-  }
-  .decorated-zone {
-    height: 668px;
-  }
-  .grid-container__one-column {
-    grid-template-rows: 3fr 1fr 3fr;
-  }
-  .grid-item__description-block {
-    max-width: 100%;
+  .main_container {
+    margin-block-start: 40px;
+    gap: 50px;
   }
 
-  .square__top {
-    top: 10px;
-    right: 10px;
-  }
-  .square__bottom {
-    left: 10px;
-    bottom: 10px;
-  }
-
-  .grid-item__title {
-    text-shadow: 4px 4px 0 var(--accent-color, #ff0070);
-  }
-
-  .grid-item__nav {
-    align-items: flex-end;
-    align-items: center;
-    justify-content: flex-end;
-    padding: 35px 10px 0;
-  }
-  .header__theme-menu-list {
-    display: flex;
-    min-inline-size: 4.375rem;
-    min-block-size: 6.125rem;
-    flex-direction: column;
-    justify-content: space-between;
-  }
-  .header__title {
-    padding-inline-start: 10px;
-    padding-block: 27px;
+    .header__title {
     font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
-    line-height: 5.89rem;
-  }
-
-  .grid-item__description {
-    margin-inline: 10px;
-  }
-
-  .grid-item__description-block::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: transparent; /* Белый полупрозрачный фон */
-    z-index: 1; /* Псевдоэлемент будет поверх содержимого блока */
   }
 
 
-  .grid-container__two-columns {
-    grid-template-columns: 1fr;
-    padding-inline: 10px;
-    margin-block: 30px;
-
-    gap: 20px;
+  .header__title {
+    margin-inline-start: 0;
   }
 
-  .grid-container__three-columns {
-    grid-template-columns: 1fr;
-    margin-block: 30px;
-    padding-inline: 10px;
+  .header__label {
+    right: 38px;
   }
 
-  .grid-item__block-one_content {
-    grid-column: 1;
-    grid-row: 2;
+  .header__description {
+    inline-size: 100%;
   }
 
-  .grid-item__block-two_header {
-    grid-column: 1;
-    grid-row: 1;
+  .header__subtitle {
+    inline-size: 100%;
   }
 
-  .grid-item__block-two_content {
-    grid-template-columns: 1fr;
-    gap: 0;
-    grid-column: 1;
-    grid-row: 2;
+  .section {
+    display: flex;
   }
 
-  .grid-item__block-three_header {
-    grid-column: 1;
-    grid-row: 1;
+  .section-causes .section__title {
+    min-inline-size: 100%;
   }
 
-  .grid-item__block-three_text {
-    grid-column: 1;
-    grid-row: 2;
+  .galery__blocks {
+    display: flex;
+    flex-direction: column;
+    margin: 0;
   }
 
-  .grid-item__block-four_header {
-    grid-column: 1;
-    grid-row: 1;
+  .footer {
+    margin-block-start: 40px;
   }
 
-  .grid-item__block-four_sunset {
-    grid-column: 1;
-    grid-row: 2;
-  }
-  .grid-item__block-four_ice-cream {
-    grid-column: 1;
-    grid-row: 3;
-  }
-  .grid-item__block-four_ice-tape {
-    grid-column: 1;
-    grid-row: 4;
-  }
-  .grid-item__block-four_books {
-    grid-column: 1;
-    grid-row: 5;
-  }
-  .grid-item__block-four_street {
-    grid-column: 1;
-    grid-row: 6;
-  }
-
-  .gap_images {
-    gap: 10px;
+  .footer__title {
+    font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
   }
 }
